# perfidb

./: Cargo.toml  README.md  test.csv
fixture/: header.csv  no_header.csv
src/: csv_reader.rs  db.rs  editor.rs  main.rs  reader.rs  transaction.rs
src/command/: insert.rs  mod.rs  select.rs
src/common/: mod.rs
src/config/: mod.rs
src/controller/: export.rs  mod.rs
src/csv_reader/: column.rs  mod.rs  tests.rs
src/db/: label_id_vec.rs  label_op.rs  minhash.rs  mod.rs  roaring_bitmap.rs  shadow.rs
src/db/filter/: equals.rs  like.rs  mod.rs  not_equal.rs  unequal.rs
src/db/search/: minhash.rs  mod.rs  roaring_bitmap.rs
src/enrich/: mod.rs
src/import/: mod.rs
src/labeller/: mod.rs
src/live_edit/: mod.rs
src/parser/: auto_label.rs  condition.rs  delete.rs  export.rs  import.rs  insert.rs  label.rs  mod.rs  select.rs
src/sql/: copy.rs  insert.rs  mod.rs  parser.rs  util.rs
src/sql/parser/: condition.rs  delete.rs  export.rs  import.rs  insert.rs  label.rs  mod.rs  select.rs  update.rs
src/sql/query/: mod.rs  select.rs
src/sql/select/: mod.rs
src/tagger/: mod.rs
src/tokeniser/: mod.rs
src/transaction/: mod.rs
src/util/: mod.rs
