[package]
name = "transdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "~1"
comfy-table = "5.0.1"