[package]
name = "perfidb"
version = "0.1.0"
edition = "2021"
authors = ["Ren Shao <ren@shao.io>"]
description = "A SQL database to manage personal finance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
toml = "0.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "~1"
comfy-table = "5.0.1"
sqlparser = "0.17"
rustyline = "10"
regex = "1"
lazy_static = "1.4.0"
walkdir = "2"
bincode = "1.3.3"
crossterm = "0.25.0"
byteorder = "1"

log = "0.4"
env_logger = "0.9"


